--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,6 @@
   <!-- typescript파일은 브라우저에서 직접 동작하지 못함, parcel 번들러가 ts파일 js로 변환해서 읽는 것 -->
 </head>
 <body>
-  
+  <h1>Hello World?!</h1>
 </body>
 </html>
